--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hello Koa 2 example with async",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon ./bin/www"
   },
   "keywords": [
     "koa",
@@ -15,11 +15,19 @@
   "repository": {},
   "dependencies": {
     "glob": "^7.1.3",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.0.0",
     "koa-bodyparser": "3.2.0",
     "koa-compose": "^4.1.0",
+    "koa-cors": "0.0.16",
+    "koa-jwt": "^3.5.1",
+    "koa-mysql-session": "0.0.2",
     "koa-router": "7.0.0",
+    "koa-session-minimal": "^3.0.4",
     "koa-static": "^5.0.0",
     "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.7"
   }
 }
